Move to index.js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <title>wasm-webtransport</title>
   </head>
   <body>
-    <script type="module">
-      import init, { hello } from "./pkg/wasm_webtransport.js";
-      init().then(() => {
-        hello();
-      });
-    </script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
