--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <script src="index.js" type="module"></script>
-    <input type="button" id="hello" value="Hello" onclick="hello()">
+    <input type="button" id="hello" value="Hello" onclick="wasm.hello()">
   </body>
 </html>
