--- a/client.html
+++ b/client.html
@@ -36,7 +36,7 @@
     </div>
     <div>
       <h2>Send data over WebTransport</h2>
-      <form name="sending">
+      <form id="sending" name="sending">
       <textarea name="data" id="data"></textarea>
       <div>
         <input type="radio" name="sendtype" value="datagram"
