Restore original HTML title
To minimize diffs with the original sample. The background color is
sufficient to distinguish them.

--- a/client.html
+++ b/client.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <title>WebTransport over HTTP/3 client (Rust/WASM)</title>
+  <title>WebTransport over HTTP/3 client</title>
   <meta charset="utf-8">
   <!-- WebTransport origin trial token. See https://developer.chrome.com/origintrials/#/view_trial/793759434324049921 -->
   <meta http-equiv="origin-trial" content="AkSQvBVsfMTgBtlakApX94hWGyBPQJXerRc2Aq8g/sKTMF+yG62+bFUB2yIxaK1furrNH3KNNeJV00UZSZHicw4AAABceyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZS5naXRodWIuaW86NDQzIiwiZmVhdHVyZSI6IldlYlRyYW5zcG9ydCIsImV4cGlyeSI6MTY0Mzc1OTk5OX0=">
@@ -24,7 +24,7 @@
       </ul>
     </div>
     <div id="tool">
-    <h1>WebTransport over HTTP/3 client (Rust/WASM)</h1>
+    <h1>WebTransport over HTTP/3 client</h1>
     <div>
       <h2>Establish WebTransport connection</h2>
       <div class="input-line">
