--- a/client.html
+++ b/client.html
@@ -31,7 +31,7 @@
       <label for="url">URL:</label>
       <input type="text" name="url" id="url"
              value="https://localhost:4433/counter">
-      <input type="button" id="connect" value="Connect" onclick="wasm.connect()">
+      <input type="button" id="connect" value="Connect" onclick="wasm.bbb()">
       </div>
     </div>
     <div>
@@ -52,7 +52,7 @@
         <label for="bidi-stream">Open a bidirectional stream</label>
       </div>
       <input type="button" id="send" name="send" value="Send data"
-             disabled onclick="wasm.send_data()">
+             onclick="wasm.aaa()">
       </form>
     </div>
     <div>
